[package]
name = "cellar"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/THShafi170/Cellar"
license = "MIT"

[lib]
name = "cellar"
crate-type = ["cdylib"]

[profile.release]
strip = true

[profile.dev]
debug = "limited"

[dependencies]
log = "0.4.29"
widestring = "1.2.1"
windebug_logger = "0.1"
minhook = "0.6.0"

[dependencies.windows]
version = "0.62"
features = ["Win32_Storage_FileSystem"]
